--- a/webapp/web/css/grouptable.css
+++ b/webapp/web/css/grouptable.css
@@ -14,6 +14,15 @@ margin: 0 1.5%;
 	float:left;
 margin: 0 1.5%;
 }
+#scroll3 {
+    width: 200px;  /* Optional */
+    /* border-collapse: collapse; */
+    border-spacing: 0;
+	height: 200px;
+   
+	float:left;
+margin: 0 1.5%;
+}
 #groupsform {
 float: left;
  width: 200px;
@@ -91,8 +100,8 @@ thead tr th {
     display: none;
 }
 
-#rows{
- height: 30px;
+#tr{
+ height: 15px;
     line-height: 30px;
 
 }
@@ -102,7 +111,12 @@ thead tr th {
     overflow-x: hidden;
     width:200px;
 }
-
+#scroll3 tbody {
+    height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width:200px;
+}
 .textarea{
 width:30%;
 
