--- a/webapp/web/css/bootstrap-cerulean.css
+++ b/webapp/web/css/bootstrap-cerulean.css
@@ -393,8 +393,8 @@ h1 small {
   font-size: 18px;
 }
 h2 {
-  font-size: 24px;
-  line-height: 36px;
+  font-size: 16px;
+  line-height: 10px;
 }
 h2 small {
   font-size: 18px;
@@ -999,6 +999,7 @@ select:focus:required:invalid:focus {
 .form-actions {
   padding: 17px 20px 18px;
   margin-top: 18px;
+  height: 20px;
   margin-bottom: 18px;
   background-color: #f5f5f5;
   border-top: 1px solid #e5e5e5;
