Minor display corrections.

--- a/webapp/web/css/grouptable.css
+++ b/webapp/web/css/grouptable.css
@@ -1,3 +1,8 @@
+/*
+ Copyright (c) 2015, Tawi Commercial Services Ltd. All rights reserved.
+ Licensed under the OSL-3.0 License:
+ http://opensource.org/licenses/OSL-3.0
+*/
 #scroll {
     width: 200px;  /* Optional */
     /* border-collapse: collapse; */
