--- a/webapp/web/css/site.css
+++ b/webapp/web/css/site.css
@@ -31,11 +31,12 @@ http://opensource.org/licenses/OSL-3.0
     background: url("../img/bg_input.gif") repeat-x scroll center top
         #E6E6E6;
     border: 1px solid #CCCCCC;
-    border-radius: 5px;
-    height: 45px;
+    border-radius: 5%;
+    height: 30%;
     margin: 2px 0 0 5px;
     padding: 6px 10px 4px;
     position: relative;
+    font-size: 120%;
 }
 
 #captchaGuidelines {
