--- a/webapp/web/css/bootstrap-cerulean.css
+++ b/webapp/web/css/bootstrap-cerulean.css
@@ -1282,7 +1282,7 @@ table {
 .table td {
   padding: 8px;
   line-height: 15px;
-  text-align: center;;
+  text-align: left;
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
@@ -4232,7 +4232,7 @@ a.badge:hover {
   font-family: 'Karla', sans-serif;
 }
 .navbar .navbar-inner {
-  background-color: #3f9fd9;
+  background-color: #195e68;
 }
 .navbar-inner{
   background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(0,0,0,0.15) 50%, rgba(30,30,30,0) 100%);
