--- a/webapp/web/css/indexpage.css
+++ b/webapp/web/css/indexpage.css
@@ -4295,12 +4295,19 @@ html{
 }
 
 body{
-	font-size:15px;
+	/**font-size:15px;
 	font-size:1.5rem;
 	line-height:22px;
 	line-height:2.2rem;
 	font-family:Arial,sans-serif;
 	background:0 0
+	margin: 0;**/
+  font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #555555;
+  background-color: #ffffff;
+  text-shadow:0 -1px 1px rgba(0, 0, 0, 0.2)
 }
 
 .g-hidden{
@@ -4471,7 +4478,8 @@ body{
 }
 
 .b-stamp__mail{
-	font:700 125%/0.82em Arial,sans-serif;
+	font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+  	font:700 125%/0.82em;
 	position:absolute;
 	left:10px;
 	bottom:11px;
@@ -4625,7 +4633,7 @@ body{
 	background-clip:content-box;
 	text-align:center;
 	position:relative;
-	font-family:arial,sans-serif;
+	font-family: "Ubuntu", Helvetica, Arial, sans-serif;  
 	color:#fff
 }
 
@@ -5141,7 +5149,8 @@ body{
 }
 
 .b-teaser_share .b-teaser__title{
-	font:11px/1 Verdana,sans-serif;
+	font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+  	font-size:11px;
 	text-align:center;
 	margin:-5px 0 14px
 }
@@ -5455,7 +5464,7 @@ body.b-page_newyear{
 	vertical-align:baseline;
 	white-space:nowrap;
 	text-decoration:none;
-	font-family:Arial,sans-serif;
+	font-family: "Ubuntu", Helvetica, Arial, sans-serif;  
 	font-size:24px;
 	line-height:22px;
 	color:#473E09;
@@ -6123,8 +6132,8 @@ html,body{
 	font-size:1.5rem;
 	line-height:22px;
 	line-height:2.2rem;
-	font-family:Arial,sans-serif;
-	position:relative;
+	font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+  	position:relative;
 	display:inline-block;
 	vertical-align:middle
 }
@@ -6197,7 +6206,7 @@ html,body{
 .new-content-text{
 	margin-bottom:35px;
 	margin-bottom:3.5rem;
-	font-family:"Textbook New",Myriad,sans-serif;
+	font-family: "Ubuntu", Helvetica, Arial, sans-serif;
 	color:#fff
 }
 
