--- a/webapp/web/css/site.css
+++ b/webapp/web/css/site.css
@@ -36,7 +36,7 @@ http://opensource.org/licenses/OSL-3.0
     margin: 2px 0 0 5px;
     padding: 6px 10px 4px;
     position: relative;
-    font-size: 120%;
+    font-size: 180%;
 }
 
 #captchaGuidelines {
@@ -55,7 +55,7 @@ http://opensource.org/licenses/OSL-3.0
 .input {
     background: none repeat scroll 0 0 transparent;
     color: #323232;
-    font: 13px Arial, Helvetica, sans-serif;
+    font-family: "Ubuntu", Helvetica, Arial, sans-serif;
     height: 16px;
     margin: 0;
     padding: 5px 10px;
