--- a/webapp/web/css/grouptable.css
+++ b/webapp/web/css/grouptable.css
@@ -5,7 +5,8 @@
 */
 #scrolltable{
     width: 200px;
-    height: 200px;
+    height: 210px;
+    margin-top: 2%;
     margin-left: 15%;
     overflow: scroll;
 text-align: left;
