--- a/webapp/web/css/bootstrap-cerulean.css
+++ b/webapp/web/css/bootstrap-cerulean.css
@@ -2100,16 +2100,16 @@ table .span24 {
   font-size: 20px;
   font-weight: bold;
   line-height: 18px;
-  color: #000000;
+  color: #f00;
   text-shadow: 0 1px 0 #ffffff;
-  opacity: 0.2;
+  opacity: 0.9;
   filter: alpha(opacity=20);
 }
 .close:hover {
   color: #000000;
   text-decoration: none;
   cursor: pointer;
-  opacity: 0.4;
+  opacity: 0.5;
   filter: alpha(opacity=40);
 }
 button.close {
