--- a/webapp/web/css/charisma-app.css
+++ b/webapp/web/css/charisma-app.css
@@ -44,7 +44,7 @@ right: -5px;
 line-height: 16px;
 height: 16px;
 padding: 0 5px;
-font-family: Arial, sans-serif;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: white !important;
 text-shadow: 0 1px 
 hsla(0, 0%, 0%, 0.25);
@@ -194,10 +194,12 @@ margin-left:-4.5px;
 }
 .box-content{
 padding:10px;
+margin-top:4%;
+}
+.box-content1{
+padding:10px;
 margin-top:0%;
 }
-
-
 .btn-round{
 border-radius: 40px;
 -webkit-border-radius: 40px;
@@ -347,7 +349,7 @@ margin-right:-2px;
 margin-left:-2px;
 }
 .brand{
-font-family: 'Shojumaru', cursive, Arial, serif; 
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
 letter-spacing:2px;
 text-shadow:1px 1px 5px rgba(0, 0, 0, 0.5);
 width:166px;
