--- a/webapp/web/css/poup.css
+++ b/webapp/web/css/poup.css
@@ -92,8 +92,8 @@ b{
     margin-right: -37px;
 }
 #contact{
-    width:700px;
-    height:500px;
+    max-width:700px;
+    max-height:500px;
     overflow: auto;
     left: 40%;
     top: 40%;
