--- a/webapp/web/css/indexpage.css
+++ b/webapp/web/css/indexpage.css
@@ -1,3 +1,20 @@
+
+ /**
+    Copyright 2015 Tawi Commercial Services Ltd
+
+    Licensed under the Open Software License, Version 3.0 (the "License"); you may 
+    not use this file except in compliance with the License. You may obtain a copy 
+    of the License at:
+    http://opensource.org/licenses/OSL-3.0
+
+    Unless required by applicable law or agreed to in writing, software distributed 
+    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+    CONDITIONS OF ANY KIND, either express or implied.
+
+    See the License for the specific language governing permissions and limitations 
+    under the License.
+    */
+
 .nb-select-dropdown .ui-menu,._nb-select-item,._nb-tabs-tab{
 	margin:0;
 	padding:0;
@@ -5890,7 +5907,9 @@ html,body{
 	color:#000;
 	background-position:right top;
 	background-image: url(../img/background.jpg);
-	
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+    border-radius: 5px;
 	display:-webkit-box;
 	display:-webkit-flex;
 	display:-ms-flexbox;
