--- a/webapp/web/css/bootstrap-cerulean.css
+++ b/webapp/web/css/bootstrap-cerulean.css
@@ -1227,7 +1227,7 @@ select:focus:required:invalid:focus {
   margin-left: 0;
 }
 .control-group {
-  margin-bottom: 9px;
+  margin-bottom: 0px;
 }
 #tableselect{
   height: 150px;
@@ -1236,6 +1236,14 @@ select:focus:required:invalid:focus {
   overflow-x:auto;
   margin-top: 1%;
   border: 2px solid black;
+  border-radius: 4px;
+}
+#tableselect11{
+  height: 150px;
+  width: 200px;
+  border-width:1px; 
+  overflow-x:auto;  
+  border: 1px solid black;
   border-radius: 4px;
 }
 #groupsel{
@@ -1257,8 +1265,7 @@ legend + .control-group {
   margin-top: 18px;
   -webkit-margin-top-collapse: separate;
 }
-.form-horizontal .control-group {
-  margin-bottom: 18px;
+.form-horizontal .control-group { 
   *zoom: 1;
 }
 .form-horizontal .control-group:before,
@@ -1279,6 +1286,7 @@ legend + .control-group {
   *display: inline-block;
   *padding-left: 20px;
   margin-left: 150px;
+  margin-bottom: 1%;
   *margin-left: 0;
 }
 .form-horizontal .controls:first-child {
