--- a/webapp/web/css/poup.css
+++ b/webapp/web/css/poup.css
@@ -8,7 +8,8 @@
 }
 h2{
     margin-left: 65px;
-    text-shadow:1px 0px 3px gray;}
+    text-shadow:1px 0px 3px gray;
+}    
 h3{
     font-size:18px;
     text-align:center;
