--- a/webapp/web/css/resetPassword.css
+++ b/webapp/web/css/resetPassword.css
@@ -59,9 +59,10 @@ margin: 0;
 }
 .err{
  width: 400px;
+ font-family: "Comic Sans MS", cursive, sans-serif;
  margin: auto;
 text-align: center;
-font-size: 20px;
+font-size: 16px;
 }
 .input-controller:focus{
     box-shadow: 0 17px 17px rgba(6, 156, 6, 0.83);
