--- a/webapp/web/css/tawi/colorbox.css
+++ b/webapp/web/css/tawi/colorbox.css
@@ -21,24 +21,24 @@
 */
 #cboxOverlay{background:#000;}
 #colorbox{}
-    #cboxTopLeft{width:14px; height:14px; background:url(../img/controls.png) no-repeat 0 0;}
-    #cboxTopCenter{height:14px; background:url(../img/border.png) repeat-x top left;}
-    #cboxTopRight{width:14px; height:14px; background:url(../img/controls.png) no-repeat -36px 0;}
-    #cboxBottomLeft{width:14px; height:43px; background:url(../img/controls.png) no-repeat 0 -32px;}
-    #cboxBottomCenter{height:43px; background:url(../img/border.png) repeat-x bottom left;}
-    #cboxBottomRight{width:14px; height:43px; background:url(../img/controls.png) no-repeat -36px -32px;}
-    #cboxMiddleLeft{width:14px; background:url(../img/controls.png) repeat-y -175px 0;}
-    #cboxMiddleRight{width:14px; background:url(../img/controls.png) repeat-y -211px 0;}
+    #cboxTopLeft{width:14px; height:14px; background:url(../../img/controls.png) no-repeat 0 0;}
+    #cboxTopCenter{height:14px; background:url(../../img/border.png) repeat-x top left;}
+    #cboxTopRight{width:14px; height:14px; background:url(../../img/controls.png) no-repeat -36px 0;}
+    #cboxBottomLeft{width:14px; height:43px; background:url(../../img/controls.png) no-repeat 0 -32px;}
+    #cboxBottomCenter{height:43px; background:url(../../img/border.png) repeat-x bottom left;}
+    #cboxBottomRight{width:14px; height:43px; background:url(../../img/controls.png) no-repeat -36px -32px;}
+    #cboxMiddleLeft{width:14px; background:url(../../img/controls.png) repeat-y -175px 0;}
+    #cboxMiddleRight{width:14px; background:url(../../img/controls.png) repeat-y -211px 0;}
     #cboxContent{background:#fff; overflow:visible;}
         .cboxIframe{background:#fff;}
         #cboxError{padding:50px; border:1px solid #ccc;}
         #cboxLoadedContent{margin-bottom:5px;}
-        #cboxLoadingOverlay{background:url(../img/loading_background.png) no-repeat center center;}
-        #cboxLoadingGraphic{background:url(../img/loading.gif) no-repeat center center;}
+        #cboxLoadingOverlay{background:url(../../img/loading_background.png) no-repeat center center;}
+        #cboxLoadingGraphic{background:url(../../img/loading.gif) no-repeat center center;}
         #cboxTitle{position:absolute; bottom:-25px; left:0; text-align:center; width:100%; font-weight:bold; color:#7C7C7C;}
         #cboxCurrent{position:absolute; bottom:-25px; left:58px; font-weight:bold; color:#7C7C7C;}
         
-        #cboxPrevious, #cboxNext, #cboxClose, #cboxSlideshow{position:absolute; bottom:-29px; background:url(../img/controls.png) no-repeat 0px 0px; width:23px; height:23px; text-indent:-9999px;}
+        #cboxPrevious, #cboxNext, #cboxClose, #cboxSlideshow{position:absolute; bottom:-29px; background:url(../../img/controls.png) no-repeat 0px 0px; width:23px; height:23px; text-indent:-9999px;}
         #cboxPrevious{left:0px; background-position: -51px -25px;}
         #cboxPrevious:hover{background-position:-51px 0px;}
         #cboxNext{left:27px; background-position:-75px -25px;}
