--- a/webapp/web/css/tawi/strapped.css
+++ b/webapp/web/css/tawi/strapped.css
@@ -2,25 +2,25 @@
   font-family: "gandhi sans";
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/gandhi-sans.ttf), url(../fonts/gandhi-serif.eot);
+  src: url(../../fonts/gandhi-sans.ttf), url(../../fonts/gandhi-serif.eot);
 }
 @font-face {
   font-family: "gandhi sans";
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/gandhi-bold-sans.ttf), url(../fonts/gandhi-bold-sans.eot);
+  src: url(../../fonts/gandhi-bold-sans.ttf), url(../../fonts/gandhi-bold-sans.eot);
 }
 @font-face {
   font-family: "gandhi serif";
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/gandhi-serif.ttf), url(../fonts/gandhi-serif.eot);
+  src: url(../../fonts/gandhi-serif.ttf), url(../../fonts/gandhi-serif.eot);
 }
 @font-face {
   font-family: "gandhi serif";
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/gandhi-bold-serif.ttf), url(../fonts/gandhi-bold-serif.eot);
+  src: url(../../fonts/gandhi-bold-serif.ttf), url(../../fonts/gandhi-bold-serif.eot);
 }
 body {
   font-size: 14px;
@@ -54,7 +54,7 @@ body, h1, h2, h3, h4, h5, h6 {
   margin: 0.7em 0 0 1em;
 }
 .jumbotron {
-  background: url(../img/noisy_net.png);
+  background: url(../../img/noisy_net.png);
   color: #fff;
   padding: 6.5em 0 6em;
   text-align: center;
