--- a/webapp/web/css/tawi/charisma-app.css
+++ b/webapp/web/css/tawi/charisma-app.css
@@ -429,7 +429,7 @@ font-weight: bold;
 margin-top:10px;
 height:15px;
 width:128px;
-background:url(../img/ajax-loaders/ajax-loader-6.gif);
+background:url(../../img/ajax-loaders/ajax-loader-6.gif);
 }
 
 .box-content .nav-tabs{
