--- a/webapp/web/css/tawi/logos.css
+++ b/webapp/web/css/tawi/logos.css
@@ -1,6 +1,6 @@
 
 h1.logo a {
-    background: url("../img/tiklogo.png") no-repeat scroll left center rgba(0, 0, 0, 0);
+    background: url("../../img/tiklogo.png") no-repeat scroll left center rgba(0, 0, 0, 0);
     display: block;
     height: 70px;
     width: 210px;
