--- a/webapp/web/css/tawi/resetPassword.css
+++ b/webapp/web/css/tawi/resetPassword.css
@@ -27,7 +27,7 @@ border-radius: 10px;
 position: absolute;
 width: 40%;
 height: 40%;
-background-image:url("../img/background.jpg");
+background-image:url("../../img/background.jpg");
 background-size: 100% 100%;
 background-repeat: no-repeat;
 margin: auto;
