--- a/webapp/web/css/tawi/styles.css
+++ b/webapp/web/css/tawi/styles.css
@@ -1,9 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,300);
 #cssmenu {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, Sans-Serif;
-  font-size: 10px;
+  font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+  font-size: 13px;
   line-height: 15px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   text-align: left;
   color: #369BD7;
 }
@@ -41,7 +41,7 @@
 }
 #cssmenu > ul li.has-sub ul {
   display: none;
-  width: 250px;
+  width: 200px;
   position: absolute;
   margin: 0;
   padding: 0;
@@ -67,7 +67,6 @@
 #cssmenu > ul li a {
   display: block;
   padding: 12px 24px 11px 24px;
-  text-decoration: none;
   color: #369BD7;
   text-shadow: 0px 1px 0px #fff;
 }
