--- a/webapp/web/css/jquery/jquery.tokenize.css
+++ b/webapp/web/css/jquery/jquery.tokenize.css
@@ -156,12 +156,12 @@ div.Tokenize ul.Dropdown li.Hover
 {
     color: white;
     text-decoration: none;
-    background-color: #0081c2;
-    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+    background-color: rgba(6,156,6,0.83);
+    background-image: -moz-linear-gradient(top, rgba(6,156,6,0.83),rgba(6,156,6,0.5);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(6,156,6,0.83)), to(rgba(6,156,6,0.5));
+    background-image: -webkit-linear-gradient(top, rgba(6,156,6,0.83), rgba(6,156,6,0.5);
+    background-image: -o-linear-gradient(top, rgba(6,156,6,0.83), rgba(6,156,6,0.5));
+    background-image: linear-gradient(to bottom, rgba(6,156,6,0.83), rgba(6,156,6,0.5));
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
