made It responsive on small devices

--- a/webapp/web/css/tawi/poup.css
+++ b/webapp/web/css/tawi/poup.css
@@ -33,6 +33,7 @@ b{
 #popup{
     padding-top:80px;
 }
+/*
 .form{
     border-radius:2px;
     padding:20px 30px;
@@ -43,7 +44,7 @@ b{
     margin:20px 250px 0 35px;
     float:left;
 }
-
+*/
 
 
 
